--- a/src/main/webapp/WEB-INF/views/thymeleaf/components/listaBicicletas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/components/listaBicicletas.html
@@ -1,20 +1,20 @@
 <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-    <div th:each="bicicleta : ${bicicletas}"
-         class="bg-white shadow-lg rounded-lg p-4 hover:shadow-xl transition duration-300 ease-in-out">
-
-        <img th:src="${bicicleta.urlImagen}" class="max-w-64 max-h-64 h-auto rounded-t-lg img-fluid" alt=""/>
-
+    <div class="bg-white shadow-lg rounded-lg p-4 hover:shadow-xl transition duration-300 ease-in-out"
+         th:each="bicicleta : ${bicicletas}">
+        <img alt="" class="max-w-64 max-h-64 h-auto rounded-t-lg img-fluid" th:src="${bicicleta.urlImagen}"/>
         <div>
-            <span class="text-lg font-semibold">Bicicleta ID: <span th:text="${bicicleta.id}"></span></span>
+            <span class="text-gray-700" th:text="${bicicleta.descripcion}"></span>
         </div>
-        <div>
-            <span class="text-gray-700">Descripción: <span th:text="${bicicleta.descripcion}"></span></span>
-        </div>
-
         <div><span th:text="${bicicleta.condicion}"></span></div>
-        <div class="mt-4">
-            <a th:href="'/bicicleta/detalle/' + ${bicicleta.id}" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out">Ir
-                al detalle</a>
+        <div class="text-center mt-4">
+            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none"
+               th:href="@{/bicicleta/{id}/resenas(id=${bicicleta.id})}">
+                Reseñas
+            </a>
+            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none"
+               th:href="@{/bicicleta/{id}/detalle(id=${bicicleta.id})}">
+                Detalle
+            </a>
         </div>
     </div>
 </div>
