--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
@@ -2,26 +2,27 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
     <div class="absolute w-[90%] min-h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
-
         <div th:replace="~{partials/nav :: nav}"></div>
-        <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Detalle Bicicleta (Cliente)</h1>
+        <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Detalle Bicicleta</h1>
 
 
             <div class="grid grid-cols-1 md:grid-rows-[2fr_auto] gap-4 md:grid-cols-2 ">
 
                 <div class="grid grid-cols-1 md:grid-cols-2 md:col-start-1 md:col-end-3">
                     <div>
-                        <img th:src="${bicicleta.urlImagen}" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" alt=""/>
+                        <img alt="" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" th:src="${bicicleta.urlImagen}"/>
                     </div>
 
-                    <form class="w-full bg-white px-3 py-2 shadow-lg rounded-lg" th:action="@{/bicicleta/{bicicletaId}/crear-alquiler(bicicletaId=${bicicleta.id})}" th:object="${datosAlquiler}"  method="POST">
+                    <form class="w-full bg-white px-3 py-2 shadow-lg rounded-lg" method="POST"
+                          th:action="@{/bicicleta/{bicicletaId}/crear-alquiler(bicicletaId=${bicicleta.id})}"
+                          th:object="${datosAlquiler}">
                         <div>
                             <h3 class="mb-2  text-2xl">Estado:</h3>
                             <span class="py-2 px-3 shadow-md rounded-full bg-blue text-white font-semibold text-sm bg-success mr-2" th:text="${bicicleta.getEstadoBicicleta()}"></span>
@@ -29,15 +30,18 @@
                             <p th:text="${bicicleta.getDescripcion()}"></p>
                         </div>
                         <div class="w-80 mx-auto mb-6">
-                            <label for="cantidadHoras" class="block mb-2 text-sm font-medium text-gray-900">Horas</label>
-                            <input th:field="*{cantidadHoras}" id="cantidadHoras" type="number" name="horas"
+                            <label class="block mb-2 text-sm font-medium text-gray-900"
+                                   for="cantidadHoras">Horas</label>
+                            <input autocomplete="off"
                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                                   autocomplete="off" required/>
+                                   id="cantidadHoras" name="horas"
+                                   required
+                                   th:field="*{cantidadHoras}" type="number"/>
                         </div>
 
                         <div class="text-center">
-                            <button type="submit"
-                                    class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center">
+                            <button class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center"
+                                    type="submit">
                                 Comenzar alquilacion
                             </button>
                         </div>
@@ -54,12 +58,8 @@
 
             </div>
 
-        <div th:if="${rol == 'Propietario'}">
+        <div th:if="${usuario.getRol() == 'Propietario'}">
             <p class="text-3xl font-bold text-gray-900">Vista Propietario</p>
-        </div>
-
-        <div th:if="${rol == 'Cliente'}">
-            <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Detalle Bicicleta (Cliente)</h1>
         </div>
     </div>
 </main>
