--- a/src/main/webapp/WEB-INF/views/thymeleaf/mis-bicicletas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/mis-bicicletas.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Mis bicicletas</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -14,30 +14,29 @@
             <p class="my-5 sm:my-10 text-3xl font-bold text-gray-900 text-center">Bicicletas</p>
             <p class="my-5 sm:my-10 text-3xl font-bold text-gray-900 text-center">Bicicletas en Alquier:</p>
             <div class="flex flex-wrap justify-center">
-
                 <div th:if="${#lists.isEmpty(bicicletas)}">
                     <p class="font-medium text-gray-900 text-center text-lg">No tenés bicicletas registradas</p>
                 </div>
-                <div th:each="bicicleta : ${bicicletas}" class="m-2 border border-gray-300 rounded-lg">
+                <div class="m-2 border border-gray-300 rounded-lg" th:each="bicicleta : ${bicicletas}">
                     <div class="max-w-[320px] pb-4">
-                        <img  th:src="${bicicleta.urlImagen}" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" style="width: 400px; height: 300px;" alt=""/>
+                        <img  alt="" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
                         <div class="p-2">
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Descripción: </p>
-                                <p th:text="${bicicleta.descripcion}" class="font-medium text-gray-800"></p>
+                                <p class="font-medium text-gray-800" th:text="${bicicleta.descripcion}"></p>
                             </div>
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Estado: </p>
-                                <p th:text="${bicicleta.estadoBicicleta}" class="font-medium text-gray-800"></p>
+                                <p class="font-medium text-gray-800" th:text="${bicicleta.estadoBicicleta}"></p>
                             </div>
                         </div>
                         <div class="my-2 flex justify-center">
-                            <a th:href="@{/baja-bicicleta/{id}(id=${bicicleta.id})}"
-                               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none">
+                            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none"
+                               th:href="@{/baja-bicicleta/{id}(id=${bicicleta.id})}">
                                 Dar de baja
                             </a>
-                            <a th:href="@{/bicicleta/{id}/resenas(id=${bicicleta.id})}"
-                               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none">
+                            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none"
+                               th:href="@{/bicicleta/{id}/resenas(id=${bicicleta.id})}">
                                 Reseñas
                             </a>
                         </div>
@@ -50,26 +49,26 @@
                 <div th:if="${#lists.isEmpty(bicicletas)}">
                     <p class="font-medium text-gray-900 text-center text-lg">No tenés bicicletas registradas</p>
                 </div>
-                <div th:each="bicicleta : ${bicicletas}" class="m-2 border border-gray-300 rounded-lg">
+                <div class="m-2 border border-gray-300 rounded-lg" th:each="bicicleta : ${bicicletas}">
                     <div class="max-w-[320px] pb-4">
-                        <img  th:src="${bicicleta.urlImagen}" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" style="width: 400px; height: 300px;" alt=""/>
+                        <img  alt="" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
                         <div class="p-2">
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Descripción: </p>
-                                <p th:text="${bicicleta.descripcion}" class="font-medium text-gray-800"></p>
+                                <p class="font-medium text-gray-800" th:text="${bicicleta.descripcion}"></p>
                             </div>
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Estado: </p>
-                                <p th:text="${bicicleta.estadoBicicleta}" class="font-medium text-gray-800"></p>
+                                <p class="font-medium text-gray-800" th:text="${bicicleta.estadoBicicleta}"></p>
                             </div>
                         </div>
                         <div class="my-2 flex justify-center">
-                            <a th:href="@{/baja-bicicleta/{id}(id=${bicicleta.id})}"
-                               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none">
+                            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none"
+                               th:href="@{/baja-bicicleta/{id}(id=${bicicleta.id})}">
                                 Dar de baja
                             </a>
-                            <a th:href="@{/bicicleta/{id}/resenas(id=${bicicleta.id})}"
-                               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none">
+                            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none"
+                               th:href="@{/bicicleta/{id}/resenas(id=${bicicleta.id})}">
                                 Reseñas
                             </a>
                         </div>
@@ -83,26 +82,26 @@
                 <div th:if="${#lists.isEmpty(bicicletas)}">
                     <p class="font-medium text-gray-900 text-center text-lg">No tenés bicicletas registradas</p>
                 </div>
-                <div th:each="bicicleta : ${bicicletas}" class="m-2 border border-gray-300 rounded-lg">
+                <div class="m-2 border border-gray-300 rounded-lg" th:each="bicicleta : ${bicicletas}">
                     <div class="max-w-[320px] pb-4">
-                        <img  th:src="${bicicleta.urlImagen}" class="max-w-64 max-h-64 rounded-t-lg img-fluid" style="width: 400px; height: 300px;" alt=""/>
+                        <img  alt="" class="max-w-64 max-h-64 rounded-t-lg img-fluid" style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
                         <div class="p-2">
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Descripción: </p>
-                                <p th:text="${bicicleta.descripcion}" class="font-medium text-gray-800"></p>
+                                <p class="font-medium text-gray-800" th:text="${bicicleta.descripcion}"></p>
                             </div>
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Estado: </p>
-                                <p th:text="${bicicleta.estadoBicicleta}" class="font-medium text-gray-800"></p>
+                                <p class="font-medium text-gray-800" th:text="${bicicleta.estadoBicicleta}"></p>
                             </div>
                         </div>
                         <div class="my-2 flex justify-center">
-                            <a th:href="@{/baja-bicicleta/{id}(id=${bicicleta.id})}"
-                               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none">
+                            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none"
+                               th:href="@{/baja-bicicleta/{id}(id=${bicicleta.id})}">
                                 Dar de baja
                             </a>
-                            <a th:href="@{/bicicleta/{id}/resenas(id=${bicicleta.id})}"
-                               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none">
+                            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 m-2 focus:outline-none"
+                               th:href="@{/bicicleta/{id}/resenas(id=${bicicleta.id})}">
                                 Reseñas
                             </a>
                         </div>
