--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -12,10 +12,42 @@
 
         <div th:replace="~{partials/nav}"></div>
         <div th:if="${usuario.getRol() == 'Propietario'}">
-            <p class="text-3xl font-bold text-gray-900">Vista Propietario</p>
-        </div>
+            <p class="text-3xl font-bold text-center text-gray-900">Vista Propietario</p>
+            <br>
+            <!-- Statats-->
 
-        <div th:if="${usuario.getRol() == 'Cliente'}">
+            <div class="grid grid-cols-3 gap-3">
+                <div>
+
+                    <a href="#" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-amber-400	 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                        <h5 class="mb-2 text-center text-5xl font-bold tracking-tight text-gray-900 dark:text-white"th:text="${#lists.size(bicicletasPropEnUso)}"></h5>
+                        <p class="font-normal  text-center text-gray-700 dark:text-gray-400">Alquiladas</p>
+                    </a>
+                </div>
+                <div>
+
+                    <a href="#" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-red-400	 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                        <h5 class="mb-2 text-center text-5xl font-bold tracking-tight text-gray-900 dark:text-white"th:text="${#lists.size(bicicletasPropEnRepa)}"></h5>
+                        <p class="font-normal  text-center text-gray-700 dark:text-gray-400">Fuera de Servicio</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="#" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-lime-400	 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                        <h5 class="mb-2 text-center text-5xl font-bold tracking-tight text-gray-900 dark:text-white"th:text="${#lists.size(bicicletasPropDispo)}"></h5>
+                        <p class="font-normal  text-center text-gray-700 dark:text-gray-400">Disponibles</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="#" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology acquisitions 2021</h5>
+                        <p class="font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                    </a>
+                </div>
+            </div>
+
+
+
+            <div th:if="${usuario.getRol() == 'Cliente'}">
             <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Vista Cliente</h1>
             <div th:replace="~{components/listaBicicletas}"></div>
         </div>
