En el registro de un propietario ahora cuando carga la dirección se agrega un campo de ciudad, provincia, código postal y país para obtener las coordenadas correctamente. Ahora la API Geoapify está en el Controlador y la API Key en el archivo .env

--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -2,41 +2,138 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Nuevo usuario</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        "use strict";
+
+        function initMap() {
+            const CONFIGURATION = {
+                "ctaTitle": "Direccion",
+                "mapOptions": {
+                    "center": {"lat": 37.4221, "lng": -122.0841},
+                    "fullscreenControl": false,
+                    "mapTypeControl": false,
+                    "streetViewControl": false,
+                    "zoom": 16,
+                    "zoomControl": false,
+                    "maxZoom": 22,
+                    "mapId": ""
+                },
+                "mapsApiKey": "AIzaSyDmBjxcRAeaXJMcpuavdRihYDOAQCp0y7w",
+                "capabilities": {"addressAutocompleteControl": true, "mapDisplayControl": true, "ctaControl": false}
+            };
+            const componentForm = [
+                'location',
+                'locality',
+                'administrative_area_level_1',
+                'country',
+                'postal_code',
+            ];
+
+            const getFormInputElement = (component) => document.getElementById(component + '-input');
+            const map = new google.maps.Map(document.getElementById("gmp-map"), {
+                zoom: CONFIGURATION.mapOptions.zoom,
+                center: {lat: 37.4221, lng: -122.0841},
+                mapTypeControl: false,
+                fullscreenControl: CONFIGURATION.mapOptions.fullscreenControl,
+                zoomControl: CONFIGURATION.mapOptions.zoomControl,
+                streetViewControl: CONFIGURATION.mapOptions.streetViewControl
+            });
+            const marker = new google.maps.Marker({map: map, draggable: false});
+            const autocompleteInput = getFormInputElement('location');
+            const autocomplete = new google.maps.places.Autocomplete(autocompleteInput, {
+                fields: ["address_components", "geometry", "name"],
+                types: ["address"],
+            });
+            autocomplete.addListener('place_changed', function () {
+                marker.setVisible(false);
+                const place = autocomplete.getPlace();
+                if (!place.geometry) {
+                    // User entered the name of a Place that was not suggested and
+                    // pressed the Enter key, or the Place Details request failed.
+                    window.alert('No details available for input: \'' + place.name + '\'');
+                    return;
+                }
+                renderAddress(place);
+                fillInAddress(place);
+            });
+
+            function fillInAddress(place) {  // optional parameter
+                const addressNameFormat = {
+                    'street_number': 'short_name',
+                    'route': 'long_name',
+                    'locality': 'long_name',
+                    'administrative_area_level_1': 'short_name',
+                    'country': 'long_name',
+                    'postal_code': 'short_name',
+                };
+                const getAddressComp = function (type) {
+                    for (const component of place.address_components) {
+                        if (component.types[0] === type) {
+                            return component[addressNameFormat[type]];
+                        }
+                    }
+                    return '';
+                };
+                getFormInputElement('location').value = getAddressComp('street_number') + ' '
+                    + getAddressComp('route');
+                for (const component of componentForm) {
+                    // Location field is handled separately above as it has different logic.
+                    if (component !== 'location') {
+                        getFormInputElement(component).value = getAddressComp(component);
+                    }
+                }
+            }
+
+            function renderAddress(place) {
+                map.setCenter(place.geometry.location);
+                marker.setPosition(place.geometry.location);
+                marker.setVisible(true);
+            }
+        }
+    </script>
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
-    <div class="w-[360px] xl:w-[480px] py-5 sm:py-10 flex flex-col items-center bg-slate-50 rounded">
+    <div class="w-[360px] xl:w-[760px] py-5 sm:py-10 flex flex-col items-center bg-slate-50 rounded">
         <h1 class="mb-6 text-3xl font-bold text-gray-900">Nuevo Usuario</h1>
-        <form class="w-full" action="#" th:action="@{/registrarme}" th:object="${datosUsuario}" method="POST">
-            <div class="w-80 mx-auto mb-6">
-                <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
-                <input th:field="*{email}" id="email" type="email"
+        <form action="#" class="w-full" method="POST" th:action="@{/registrarme}"
+              th:object="${datosUsuario}">
+            <div class="w-96 mx-auto mb-6">
+                <label class="block mb-2 text-sm font-medium text-gray-900" for="email">Email</label>
+                <input autocomplete="off"
                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                       autocomplete="off" required/>
+                       id="email"
+                       required
+                       th:field="*{email}" type="email"/>
             </div>
-            <div class="w-80 mx-auto mb-6">
-                <label for="nombre" class="block mb-2 text-sm font-medium text-gray-900">Nombre</label>
-                <input th:field="*{nombre}" id="nombre" type="text"
+            <div class="w-96 mx-auto mb-6">
+                <label class="block mb-2 text-sm font-medium text-gray-900" for="nombre">Nombre</label>
+                <input autocomplete="off"
                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                       autocomplete="off" required/>
+                       id="nombre"
+                       required
+                       th:field="*{nombre}" type="text"/>
             </div>
-            <div class="w-80 mx-auto mb-6">
-                <label for="password"
-                       class="block mb-2 text-sm font-medium text-gray-900">Contraseña</label>
-                <input th:field="*{password}" type="password" id="password"
+            <div class="w-96 mx-auto mb-6">
+                <label class="block mb-2 text-sm font-medium text-gray-900"
+                       for="password">Contraseña</label>
+                <input autocomplete="off"
                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                       autocomplete="off" required/>
+                       id="password"
+                       required
+                       th:field="*{password}" type="password"/>
             </div>
-            <div class="w-80 mx-auto mb-6">
+            <div class="w-96 mx-auto mb-6">
                 <ul class="grid w-full gap-6">
                     <li>
-                        <input type="radio" id="cliente" name="rol" value="Cliente" class="hidden peer"
-                               onclick="mostrarContenedorDireccion()">
-                        <label for="cliente"
-                               class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white border border-gray-200 rounded-lg cursor-pointer peer-checked:border-blue-600 peer-checked:text-blue-600 hover:text-gray-600 hover:bg-gray-100">
+                        <input class="hidden peer" id="cliente" name="rol" onclick="mostrarContenedorDireccion()"
+                               type="radio"
+                               value="Cliente">
+                        <label class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white border border-gray-200 rounded-lg cursor-pointer peer-checked:border-blue-600 peer-checked:text-blue-600 hover:text-gray-600 hover:bg-gray-100"
+                               for="cliente">
                             <div class="block">
                                 <div class="w-full text-lg font-semibold">Soy cliente</div>
                                 <div class="w-full">Vas a alquilar la bicicleta de otro</div>
@@ -44,10 +141,11 @@
                         </label>
                     </li>
                     <li>
-                        <input type="radio" id="propietario" name="rol" value="Propietario" class="hidden peer"
-                               onclick="mostrarContenedorDireccion()">
-                        <label for="propietario"
-                               class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white border border-gray-200 rounded-lg cursor-pointer peer-checked:border-blue-600 peer-checked:text-blue-600 hover:text-gray-600 hover:bg-gray-100">
+                        <input class="hidden peer" id="propietario" name="rol" onclick="mostrarContenedorDireccion()"
+                               type="radio"
+                               value="Propietario">
+                        <label class="inline-flex items-center justify-between w-full p-5 text-gray-500 bg-white border border-gray-200 rounded-lg cursor-pointer peer-checked:border-blue-600 peer-checked:text-blue-600 hover:text-gray-600 hover:bg-gray-100"
+                               for="propietario">
                             <div class="block">
                                 <div class="w-full text-lg font-semibold">Soy propietario</div>
                                 <div class="w-full">Vas a poner tus bicicletas en alquiler</div>
@@ -56,32 +154,67 @@
                     </li>
                 </ul>
             </div>
-            <div class="w-80 mx-auto mb-6 hidden" id="contenedorDireccion">
-                <label for="direccion" class="block mb-2 text-sm font-medium text-gray-900">Dirección</label>
-                <input type="text" id="direccion" oninput="obtenerCoordenadas()"
-                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                       autocomplete="off" required/>
-                <input type="hidden" id="latitud" th:field="*{latitud}"/>
-                <input type="hidden" id="longitud" th:field="*{longitud}"/>
+            <div class="w-96 mx-auto mb-6 hidden" id="contenedorDireccion">
+                <div class="flex flex-col">
+                    <div class="w-96 mx-auto mb-6">
+                        <label class="block mb-2 text-sm font-medium text-gray-900"
+                               for="location-input">Dirección</label>
+                        <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                               id="location-input"
+                               th:field="*{direccion}" type="text"/>
+                    </div>
+                    <div class="w-96 mx-auto mb-6">
+                        <label class="block mb-2 text-sm font-medium text-gray-900"
+                               for="location-input">Ciudad</label>
+                        <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                               id="locality-input"
+                               th:field="*{ciudad}" type="text"/>
+                    </div>
+                    <div class="w-96 mx-auto mb-6">
+                        <label class="block mb-2 text-sm font-medium text-gray-900"
+                               for="administrative_area_level_1-input">Provincia</label>
+                        <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                               id="administrative_area_level_1-input"
+                               th:field="*{provincia}" type="text"/>
+                    </div>
+                    <div class="w-96 mx-auto mb-6">
+                        <label class="block mb-2 text-sm font-medium text-gray-900"
+                               for="administrative_area_level_1-input">Código postal</label>
+                        <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                               id="postal_code-input"
+                               th:field="*{codigoPostal}" type="text"/>
+                    </div>
+                    <div class="w-96 mx-auto mb-6">
+                        <label class="block mb-2 text-sm font-medium text-gray-900"
+                               for="country-input">País</label>
+                        <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                               id="country-input"
+                               th:field="*{pais}" type="text"/>
+                    </div>
+                    <div class="w-96 h-96" id="gmp-map"></div>
+                </div>
             </div>
-            <div th:if="${error != null}"
-                 class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50"
-                 role="alert">
-                <span th:text="${error}" class="font-medium"></span>
+            <div class="w-96 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50"
+                 role="alert"
+                 th:if="${error != null}">
+                <span class="font-medium" th:text="${error}"></span>
             </div>
             <div class="text-center">
-                <button type="submit"
-                        class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center">
+                <button class="w-72 sm:w-96 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center"
+                        type="submit">
                     Crear cuenta
                 </button>
             </div>
         </form>
-        <a href="login"
-           class="w-72 sm:w-80 mt-2 py-2.5 px-5 text-sm font-medium text-center text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200">
+        <a class="w-72 sm:w-96 mt-2 py-2.5 px-5 text-sm font-medium text-center text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200"
+           href="login">
             Iniciar sesión
         </a>
     </div>
 </main>
+<script async
+        defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmBjxcRAeaXJMcpuavdRihYDOAQCp0y7w&libraries=places&callback=initMap&solution_channel=GMP_QB_addressselection_v1_cAB"></script>
 <script type="text/javascript">
     function mostrarContenedorDireccion() {
         const direccion = document.getElementById('contenedorDireccion');
@@ -92,21 +225,6 @@
             direccion.classList.remove('block');
             direccion.classList.add('hidden');
         }
-    }
-
-    function obtenerCoordenadas() {
-        let direccion = document.getElementById("direccion").value;
-        fetch('https://api.geoapify.com/v1/geocode/search?text=' + direccion + '&apiKey=8cb977ca2d744bcf815a3d2b3617a5c7')
-            .then(response => {
-                return response.json();
-            })
-            .then(data => {
-                document.getElementById("latitud").value = data.features[0].properties.lat;
-                document.getElementById("longitud").value = data.features[0].properties.lon;
-            })
-            .catch(error => {
-                console.error('Error al obtener las coordenadas:', error);
-            });
     }
 </script>
 </body>
